<resources>
    <string name="app_name">DiceRoller</string>
    <string name="rtd">RTD</string>
    <string name="welcome">Welcome</string>
    <string name="hint" />
    <string name="enter_number_1_6">Enter number (1–6)</string>
    <string name="score">Score:</string>
    <string name="_0">0</string>
    <string name="i_am_feeling_lucky">I am feeling lucky</string>
    <string name="let_s_play_d_icebreakers">Let\'s play D-ICEBREAKERS</string>
</resources>
